Begin implementing QueueDetails page, fix tslint configs, minor improvements
